--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -95,6 +95,8 @@ ALKiln uses [cucumberjs](https://cucumber.io/), [puppeteerjs](https://pptr.dev/)
 
 Even though this is built using cucumberjs, this framework has a different, less lofty, purpose. cucumberjs focuses on BDD (behavior driven development). This framework mostly deals with regression testing and other conveniences.
 
+For security, [ALKiln freezes the versions of its third-party libraries](#alkiln-freezes-dependencies) and only updates them after we check their changes.
+
 
 ## Where are our repositories? {#repos}
 
